--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "classnames": "^2.3.2",
     "customize-cra": "^1.0.0",
+    "dotenv": "^16.3.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
