--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "chart.js": "^4.4.0",
     "classnames": "^2.3.2",
     "customize-cra": "^1.0.0",
     "dotenv": "^16.3.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
