--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
         "classnames": "^2.3.2",
         "customize-cra": "^1.0.0",
         "dotenv": "^16.3.1",
+        "flickity": "^2.3.0",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
+        "react-flickity-component": "^4.0.7",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
         "reactjs-popup": "^2.0.6",
