--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-dom": "^18.2.0",
         "react-flickity-component": "^4.0.7",
+        "react-loading-skeleton": "^3.3.1",
         "react-router-dom": "^6.16.0",
         "react-scripts": "5.0.1",
         "reactjs-popup": "^2.0.6",
